<?xml version="1.0"?>
<package format="2">
  <name>apriltags_cpp</name>
  <version>0.1.2</version>
  <description>
    apriltags C++ core library
  </description>
  <url type="repository">https://github.com/locusrobotics/apriltags_cpp</url>

  <maintainer email="tmoore@locusrobotics.com">Tom Moore</maintainer>

  <license>BSD</license>

  <depend>cgal</depend>
  <depend>cgal-qt5</depend>
  <depend>libopencv-dev</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <exec_depend>catkin</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
